src/objects/ADvendio__CreativeTemplateVariable__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__CreativeTemplate__c</fullName>
        <label>Creative Template</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Creative Template Variables</relationshipLabel>
        <relationshipName>CreativeTemplateVariables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__ForeignId__c</fullName>
        <label>Foreign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ManualDeactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Creative Template Variable</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Creative Template Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Template Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>